--- a/project website/css/battarey.css
+++ b/project website/css/battarey.css
@@ -3,3 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.main {
+  height: 250px;
+  width: 150px;
+  border: 4px solid gray;
+  border-radius: ;
+}
